# libudev_android

./: CMakeLists.txt
src/: android.h
src/libudev/: libudev-device.c  libudev-hwdb.c
src/shared/: fileio.c  log.c  log.h  mkdir.c  path-util.c  util.c  util.h
